--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "classnames": "^2.3.1",
     "express": "^4.17.1",
     "history": "^4.10.1",
     "http": "^0.0.1-security",
     "nodemon": "^2.0.12",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
